# webxexpert-devtools

./: .gitignore  CLAUDE.md  INTEGRATION.md
aether/: Aether.ps1  CLAUDE.md  aether.sh  aether_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
aether-ide/: LICENSE.txt  README.md  installer.nsh  package.json
aether-ide/src/main/: main.js
aether-ide/src/renderer/: index.html  renderer.js  styles.css  terminal.html
aether-vscode/: .vscodeignore  README.md  package.json
aether-vscode/src/: extension.js  mcp-server.js
aether/scripts/: build_languages.ps1  build_languages.sh
aether/tests/: __init__.py  conftest.py  test_find_references.py  test_replace_symbol.py
chrome-console-for-claude/: README.md  background.js  content.js  inject.js  manifest.json  popup.html  popup.js
claude-console-bridge/: README.md  index.js  package.json
claude-console-bridge/types/: index.d.ts
