[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-code-engine"
version = "0.1.0"
description = "AST-based code intelligence engine with tree-sitter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "WebXExpert"}
]
keywords = ["ast", "tree-sitter", "code-intelligence", "refactoring", "symbols"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "tree-sitter>=0.21.0,<0.23.0",
    "tree-sitter-languages>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aether = "aether_engine:main"

[project.urls]
Homepage = "https://github.com/your-username/aether"
Repository = "https://github.com/your-username/aether"
Issues = "https://github.com/your-username/aether/issues"

[tool.setuptools]
py-modules = ["aether_engine"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
